# newlib-1.19.0-human68k

./: config.sub  configure  configure.ac
newlib/: aclocal.m4  configure.host
newlib/libc/: aclocal.m4  configure
newlib/libc/argz/: Makefile.in
newlib/libc/ctype/: Makefile.in
newlib/libc/errno/: Makefile.in
newlib/libc/iconv/: Makefile.in
newlib/libc/iconv/ccs/: Makefile.in
newlib/libc/iconv/ces/: Makefile.in
newlib/libc/iconv/lib/: Makefile.in
newlib/libc/locale/: Makefile.in
newlib/libc/machine/: Makefile.in  configure
newlib/libc/machine/a29k/: Makefile.in
newlib/libc/machine/arm/: Makefile.in
newlib/libc/machine/bfin/: Makefile.in
newlib/libc/machine/cr16/: Makefile.in
newlib/libc/machine/cris/: Makefile.in  configure
newlib/libc/misc/: Makefile.in
newlib/libc/posix/: Makefile.in
newlib/libc/sys/: Makefile.in  aclocal.m4  configure  configure.in
newlib/libc/sys/human68k/: Makefile.am  Makefile.in  chmod.c  close.c  config.h  configure  configure.in  crt1.c  doserror.c  exit.c  fds.c  fds.h  fork.c  fstat.c  getpid.c  gettod.c  isatty.c  kill.c  link.c  lseek.c  main.c  open.c  read.c  sbrk.c  unlink.c  write.c
newlib/libc/sys/human68k/include/: hupair.h
newlib/libc/sys/human68k/include/human68k/: class.h  error.h
newlib/libc/sys/human68k/libdos/: Makefile.am  Makefile.in
newlib/libc/sys/human68k/libhupair/: dehupair.c  enhupair.c  hupair_shell.c
newlib/libc/sys/human68k/libiocs/: Makefile.am  Makefile.in
newlib/libc/sys/human68k/machine/: endian.h
newlib/libc/sys/human68k/sys/: fcntl.h
(+104 files in other folders)
