dnl This is the newlib/libc/sys/human68k configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_CONFIG_SRCDIR([crt1.c])

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../../..)

NEWLIB_CONFIGURE(../../..)

EXTRA_SUBDIRS="libiocs libdos"

AC_SUBST(EXTRA_SUBDIRS)

CRT0=crt0.o
AC_SUBST(CRT0)

AC_CONFIG_FILES([Makefile libiocs/Makefile libdos/Makefile])
AC_OUTPUT
